--- a/update.html
+++ b/update.html
@@ -55,7 +55,7 @@
                     <a href="https://www.linkedin.com/in/hafiz-uddin-ahmed-727748208" target="_blank"><img src="./icon/link.png" alt="LinkedIn"></a>
                     <a href="https://github.com/Hisbule" target="_blank"><img src="./icon/git.png" alt="GitHub"></a>
                     <a href="mailto:uddinhafiz594@gmail.com"><img src="./icon/gmail.png" alt="Gmail"></a>
-                    <a href="https://wa.me/yourwhatsappnumber" target="_blank"><img src="./icon/whatsapp.png" alt="WhatsApp"></a>
+                    <a href="https://wa.me/+8801764757715" target="_blank"><img src="./icon/whatsapp.png" alt="WhatsApp"></a>
                     </div>
                 </div>
            
@@ -325,6 +325,7 @@ Throughout my studies, I've worked on a variety of intriguing projects, includin
             <a href="https://www.instagram.com/sazidskm8?igsh=MW1mbXRodnBpY2NvMA=="><i class="fab fa-instagram"></i></a>
             <a href="https://www.linkedin.com/in/hafiz-uddin-ahmed-727748208"><i class="fab fa-linkedin-in"></i></a>
             <a href="https://github.com/Hisbule"><i class="fab fa-github"></i></a>
+            <a href="https://wa.me/+8801764757715"><i class="fab fa-whatsapp"></i></a>
         </div>
         <div class="footer-text">
             © 2024 Hafiz Uddin Ahmed ADNAN. All rights reserved
