--- a/update.html
+++ b/update.html
@@ -33,7 +33,7 @@
         <p align="justify" class="sub-heading">
             I am a passionate learner and creator, constantly seeking to explore the boundaries of technology. With a strong foundation in computer science, I approach every project with enthusiasm and a commitment to excellence. My journey is fueled by curiosity and the desire to innovate, whether it’s developing AI solutions, coding robust web applications, or working on exciting Arduino projects. I believe that every challenge is an opportunity for growth, and I embrace each step on my path to becoming a better version of myself.
         </p>
-        <a href="#" class="neon-button">Resume</a>
+        <a href="https://github.com/Hisbule/Portfolio/blob/main/Resume.pdf" class="neon-button">Resume</a>
     </div>
     <div class="right-section">
         <div class="profile-picture">
