--- a/update.html
+++ b/update.html
@@ -37,7 +37,7 @@
     </div>
     <div class="right-section">
         <div class="profile-picture">
-            <img src="./1fefd71a-f335-4d22-ad22-b87f27ecdc85.png" alt="Hafiz Uddin Portfolio Picture" class="portfolio-img">
+            <img src="./1fefd71a-f335-4d22-ad22-b87f27ecdc85.png" alt="Hafiz Uddin Portfolio Picture" class="portfolio-img" loading="lazy">
         </div>
     </div>
 </div>
